--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<a href="repository.xyz.wolfietech.dev.apps.kodi.coreelec.addons-1.0.zip">repository.xyz.wolfietech.dev.apps.kodi.coreelec.addons-1.0.zip</a>
+<a href="zips/repository.xyz.wolfietech.dev.apps.kodi.coreelec.addons/repository.xyz.wolfietech.dev.apps.kodi.coreelec.addons-1.0.zip">repository.xyz.wolfietech.dev.apps.kodi.coreelec.addons-1.0.zip</a>
 
